--- a/app/src/main/res/layout/dialog_create_note_layout.xml
+++ b/app/src/main/res/layout/dialog_create_note_layout.xml
@@ -30,16 +30,74 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/createNoteTxtTitle2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="Type"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.069"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/createNoteTxtTitle" />
+
+        <TextView
+            android:id="@+id/createNoteTxtTitle3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:gravity="center"
+            android:text="SubType"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.076"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/type_spinner" />
+
+        <Spinner
+            android:id="@+id/type_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="24dp"
+            android:background="@drawable/ft_border_rounded_creme"
+            android:prompt="Type"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/createNoteTxtTitle2" />
+
+        <Spinner
+            android:id="@+id/subtype_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="24dp"
+            android:background="@drawable/ft_border_rounded_creme"
+            android:prompt="SubType"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/createNoteTxtTitle3" />
+
         <Button
             android:id="@+id/createNoteBtnSubmit"
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:text="Submit"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/createNoteEditComment"
+            app:layout_constraintVertical_bias="1.0" />
 
         <Button
             android:id="@+id/createNoteBtnCancel"
@@ -47,19 +105,21 @@
             android:layout_height="50dp"
             android:layout_marginStart="24dp"
             android:layout_marginBottom="24dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:text="Cancel"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/createNoteEditComment"
+            app:layout_constraintVertical_bias="1.0" />
 
         <EditText
             android:id="@+id/createNoteEditComment"
-            android:layout_width="341dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
-            android:layout_marginBottom="12dp"
             android:background="@color/white"
             android:ems="10"
             android:gravity="top"
@@ -70,12 +130,10 @@
             android:minHeight="96dp"
             android:padding="5dp"
             android:singleLine="false"
-            app:layout_constraintBottom_toTopOf="@+id/createNoteBtnSubmit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/createNoteTxtTitle"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintTop_toBottomOf="@+id/subtype_spinner" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
