--- a/app/src/main/res/layout-port/fragment_list_formations_portrait.xml
+++ b/app/src/main/res/layout-port/fragment_list_formations_portrait.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/TryoutTestFragment"
@@ -20,16 +19,18 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/tryoutFormationFloatingActionButton"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
         android:src="@drawable/soccer_ball_icon"
-        app:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/transparent"
+        app:fabSize="normal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:rippleColor="@color/colorAccent" />
+        app:maxImageSize="45dp"
+        app:rippleColor="@color/transparent" />
 
 
     <androidx.recyclerview.widget.RecyclerView
