--- a/app/src/main/res/layout/card_note_small.xml
+++ b/app/src/main/res/layout/card_note_small.xml
@@ -6,25 +6,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="5dp"
     android:layout_marginTop="3dp"
     android:layout_marginRight="5dp"
     android:layout_marginBottom="3dp"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="5dp"
-    app:cardMaxElevation="5dp">
+    app:cardCornerRadius="0dp"
+    app:cardElevation="0dp"
+    app:cardMaxElevation="0dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/cardNoteSmallImgProfile"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="25dp"
             android:layout_marginTop="8dp"
             android:src="@drawable/ysr_empty_profile_icon_blue"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,13 +34,11 @@
             android:id="@+id/cardNoteSmallImgIconDate"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginBottom="36dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="8dp"
             android:src="@drawable/ysr_empty_profile_icon_blue"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardNoteSmallImgProfile"
-            app:layout_constraintVertical_bias="0.437" />
+            app:layout_constraintTop_toBottomOf="@+id/cardNoteSmallImgProfile" />
 
         <TextView
             android:id="@+id/cardNoteSmallTxtUserName"
@@ -68,20 +66,37 @@
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/cardNoteSmallImgIconDate"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/cardNoteSmallImgIconDate"
-            app:layout_constraintTop_toBottomOf="@+id/cardNoteSmallTxtUserName" />
+            app:layout_constraintTop_toBottomOf="@+id/cardNoteSmallTxtUserName"
+            app:layout_constraintVertical_bias="1.0" />
 
-        <TextView
-            android:id="@+id/cardNoteSmallTxtMessage"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:text="This is a message"
-            android:textSize="14sp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="25dp"
+            android:background="@drawable/ft_border_rounded_creme"
+            android:gravity="top"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardNoteSmallImgIconDate" />
+            app:layout_constraintTop_toBottomOf="@+id/cardNoteSmallTxtDate"
+            app:layout_constraintVertical_bias="1.0">
+
+            <TextView
+                android:id="@+id/cardNoteSmallTxtMessage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="top"
+                android:inputType="textShortMessage|textLongMessage|textMultiLine|textPersonName|text"
+                android:maxLines="50"
+                android:text="This is a message"
+                android:textSize="14sp" />
+        </LinearLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
