--- a/app/src/main/res/layout/dialog_create_note_layout.xml
+++ b/app/src/main/res/layout/dialog_create_note_layout.xml
@@ -34,13 +34,12 @@
             android:id="@+id/createNoteTxtTitle2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="32dp"
             android:gravity="center"
             android:text="Type"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.069"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/createNoteTxtTitle" />
 
@@ -48,39 +47,37 @@
             android:id="@+id/createNoteTxtTitle3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
             android:gravity="center"
             android:text="SubType"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/createNoteTxtTitle2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.076"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/type_spinner" />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/subtype_spinner"
+            app:layout_constraintTop_toTopOf="@+id/createNoteTxtTitle2" />
 
         <Spinner
             android:id="@+id/type_spinner"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_width="150dp"
+            android:layout_height="40dp"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/ft_border_rounded_creme"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/createNoteTxtTitle2" />
 
         <Spinner
             android:id="@+id/subtype_spinner"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_marginStart="24dp"
+            android:layout_width="150dp"
+            android:layout_height="40dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
             android:background="@drawable/ft_border_rounded_creme"
+            app:layout_constraintBottom_toBottomOf="@+id/type_spinner"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.954"
+            app:layout_constraintStart_toEndOf="@+id/type_spinner"
             app:layout_constraintTop_toBottomOf="@+id/createNoteTxtTitle3" />
 
         <Button
@@ -100,10 +97,10 @@
         <Button
             android:id="@+id/createNoteBtnCancel"
             android:layout_width="150dp"
-            android:layout_height="50dp"
+            android:layout_height="0dp"
             android:layout_marginStart="24dp"
-            android:layout_marginBottom="24dp"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="24dp"
             android:layout_weight="1"
             android:text="Cancel"
             app:layout_constraintBottom_toBottomOf="parent"
