--- a/app/src/main/res/layout/ysr_item_field_value.xml
+++ b/app/src/main/res/layout/ysr_item_field_value.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#00FFFFFF">
 
     <TextView
         android:id="@+id/ysrTxtItemFieldName"
@@ -12,6 +12,7 @@
         android:layout_height="25dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:background="#00FFFFFF"
         android:gravity="bottom"
         android:text="Field Name"
         app:layout_constraintEnd_toStartOf="@+id/ysrEditItemFieldValue"
@@ -23,6 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:backgroundTint="#00FFFFFF"
         android:ems="10"
         android:gravity="bottom"
         android:inputType="textPersonName"
