custom attributes integration

--- a/app/src/main/res/layout/ysr_add_attributes.xml
+++ b/app/src/main/res/layout/ysr_add_attributes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<io.usys.report.ui.views.YsrAddAttributesList
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -63,4 +63,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</io.usys.report.ui.views.YsrAddAttributesList>
+</androidx.cardview.widget.CardView>
