--- a/app/src/main/res/layout/dialog_player_profile_layout.xml
+++ b/app/src/main/res/layout/dialog_player_profile_layout.xml
@@ -64,17 +64,31 @@
                 app:layout_constraintStart_toEndOf="@+id/includePlayerProfileHeader"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <include
+<!--            <include-->
+<!--                android:id="@+id/includeYsrListViewNotes"-->
+<!--                layout="@layout/ysr_add_attributes"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintHorizontal_bias="0.0"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/includePlayerProfileHeader"-->
+<!--                app:layout_constraintVertical_bias="0.0" />-->
+
+
+            <io.usys.report.ui.views.LudiCustomAttributesList
                 android:id="@+id/includeYsrListViewNotes"
-                layout="@layout/ysr_add_attributes"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="500dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/includePlayerProfileHeader"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintVertical_bias="0.0">
+
+            </io.usys.report.ui.views.LudiCustomAttributesList>
 
             <ImageButton
                 android:id="@+id/btnEditModePlayerProfile"
