--- a/app/src/main/res/layout/card_user_header_without_ratingbar.xml
+++ b/app/src/main/res/layout/card_user_header_without_ratingbar.xml
@@ -35,6 +35,7 @@
             android:text="Chace Zanaty"
             android:textSize="16sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardUserHeaderBasicImgProfile" />
