--- a/app/src/main/res/layout/ysr_add_attributes.xml
+++ b/app/src/main/res/layout/ysr_add_attributes.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ysrAddAttributeListView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#00000000"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    app:cardBackgroundColor="#00000000"
+    app:cardCornerRadius="0dp"
+    app:cardElevation="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ysrMainLayoutAddAttributeListView"
