--- a/app/src/main/res/layout/ysr_item_field_value.xml
+++ b/app/src/main/res/layout/ysr_item_field_value.xml
@@ -3,33 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="45dp"
     android:layout_margin="2dp">
 
     <TextView
         android:id="@+id/ysrTxtItemFieldName"
-        android:layout_width="0dp"
-        android:layout_height="25dp"
+        android:layout_width="197dp"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        android:background="#00FFFFFF"
-        android:gravity="bottom"
+        android:gravity="center"
         android:singleLine="false"
         android:text="Field Name"
         android:textAllCaps="true"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/ysrEditItemFieldValue"
+        app:layout_constraintBottom_toTopOf="@+id/divider"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/ysrEditItemFieldValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="2dp"
-        android:backgroundTint="#00FFFFFF"
-        android:ems="10"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/transparent"
         android:gravity="center|center_vertical"
         android:inputType="textPersonName"
         android:lines="1"
@@ -39,5 +35,15 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/ysrTxtItemFieldName"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
