--- a/app/src/main/res/layout/ysr_item_add_attributes.xml
+++ b/app/src/main/res/layout/ysr_item_add_attributes.xml
@@ -11,7 +11,7 @@
         android:layout_width="197dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:singleLine="false"
         android:text="Field Name"
         android:textAllCaps="true"
@@ -26,7 +26,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/transparent"
-        android:gravity="center|center_vertical"
+        android:gravity="center_vertical"
         android:inputType="textPersonName"
         android:lines="1"
         android:singleLine="false"
