--- a/app/src/main/res/layout/dialog_player_profile_layout.xml
+++ b/app/src/main/res/layout/dialog_player_profile_layout.xml
@@ -21,6 +21,7 @@
             android:id="@+id/reviewMainLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:background="#00FFFFFF">
 
             <include
