--- a/app/src/main/res/navigation/navigation_basic_user.xml
+++ b/app/src/main/res/navigation/navigation_basic_user.xml
@@ -77,7 +77,7 @@
 
     <fragment
         android:id="@+id/navigation_create_note"
-        android:name="io.usys.report.ui.ludi.note.CreateNoteFragment"
+        android:name="io.usys.report.ui.ludi.note.DualNotesFragment"
         android:label="@string/title_profile"
         tools:layout="@layout/dialog_create_note_layout" >
     </fragment>
