--- a/app/src/main/res/layout/dialog_create_note_layout.xml
+++ b/app/src/main/res/layout/dialog_create_note_layout.xml
@@ -11,124 +11,173 @@
     app:cardElevation="10dp">
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/createNoteMainLayout"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#00FFFFFF">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/createNoteTxtTitle"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txtSwitchView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:text="View"
+                android:textSize="18sp" />
+
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/noteSwitch"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:id="@+id/txtSwitchCreate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="Create"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/createNoteMainLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:gravity="center"
-            android:text="Leave a Note"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            android:background="#00FFFFFF">
+
+            <TextView
+                android:id="@+id/createNoteTxtTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:gravity="center"
+                android:text="Leave a Note"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/createNoteTxtTitle2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="32dp"
+                android:gravity="center"
+                android:text="Type"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/createNoteTxtTitle" />
+
+            <TextView
+                android:id="@+id/createNoteTxtTitle3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="SubType"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/createNoteTxtTitle2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/subtype_spinner"
+                app:layout_constraintTop_toTopOf="@+id/createNoteTxtTitle2" />
+
+            <Spinner
+                android:id="@+id/type_spinner"
+                android:layout_width="150dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/ft_border_rounded_creme"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/createNoteTxtTitle2" />
+
+            <Spinner
+                android:id="@+id/subtype_spinner"
+                android:layout_width="150dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="24dp"
+                android:background="@drawable/ft_border_rounded_creme"
+                app:layout_constraintBottom_toBottomOf="@+id/type_spinner"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.954"
+                app:layout_constraintStart_toEndOf="@+id/type_spinner"
+                app:layout_constraintTop_toBottomOf="@+id/createNoteTxtTitle3" />
+
+            <Button
+                android:id="@+id/createNoteBtnSubmit"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginBottom="24dp"
+                android:layout_weight="1"
+                android:text="Submit"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/createNoteEditComment"
+                app:layout_constraintVertical_bias="1.0" />
+
+            <Button
+                android:id="@+id/createNoteBtnCancel"
+                android:layout_width="150dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="24dp"
+                android:layout_weight="1"
+                android:text="Cancel"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/createNoteEditComment"
+                app:layout_constraintVertical_bias="1.0" />
+
+            <EditText
+                android:id="@+id/createNoteEditComment"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="24dp"
+                android:background="@color/white"
+                android:ems="10"
+                android:gravity="top"
+                android:hint="Leave a note"
+                android:inputType="textLongMessage|textMultiLine|textPersonName"
+                android:maxLength="150"
+                android:maxLines="6"
+                android:minHeight="96dp"
+                android:padding="5dp"
+                android:singleLine="false"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/subtype_spinner" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <include
+            android:id="@+id/includeNoteList"
+            layout="@layout/ysr_title_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/createNoteTxtTitle2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="32dp"
-            android:gravity="center"
-            android:text="Type"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/createNoteTxtTitle" />
+    </LinearLayout>
 
-        <TextView
-            android:id="@+id/createNoteTxtTitle3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="SubType"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/createNoteTxtTitle2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/subtype_spinner"
-            app:layout_constraintTop_toTopOf="@+id/createNoteTxtTitle2" />
-
-        <Spinner
-            android:id="@+id/type_spinner"
-            android:layout_width="150dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/ft_border_rounded_creme"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/createNoteTxtTitle2" />
-
-        <Spinner
-            android:id="@+id/subtype_spinner"
-            android:layout_width="150dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="24dp"
-            android:background="@drawable/ft_border_rounded_creme"
-            app:layout_constraintBottom_toBottomOf="@+id/type_spinner"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.954"
-            app:layout_constraintStart_toEndOf="@+id/type_spinner"
-            app:layout_constraintTop_toBottomOf="@+id/createNoteTxtTitle3" />
-
-        <Button
-            android:id="@+id/createNoteBtnSubmit"
-            android:layout_width="150dp"
-            android:layout_height="50dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="24dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:text="Submit"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/createNoteEditComment"
-            app:layout_constraintVertical_bias="1.0" />
-
-        <Button
-            android:id="@+id/createNoteBtnCancel"
-            android:layout_width="150dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="24dp"
-            android:layout_weight="1"
-            android:text="Cancel"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/createNoteEditComment"
-            app:layout_constraintVertical_bias="1.0" />
-
-        <EditText
-            android:id="@+id/createNoteEditComment"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="24dp"
-            android:background="@color/white"
-            android:ems="10"
-            android:gravity="top"
-            android:hint="Leave a note"
-            android:inputType="textLongMessage|textMultiLine|textPersonName"
-            android:maxLength="150"
-            android:maxLines="6"
-            android:minHeight="96dp"
-            android:padding="5dp"
-            android:singleLine="false"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/subtype_spinner" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
