--- a/app/src/main/res/layout/dual_note_fragment.xml
+++ b/app/src/main/res/layout/dual_note_fragment.xml
@@ -71,7 +71,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="16dp"
                 android:gravity="center"
                 android:text="Type"
                 android:textSize="18sp"
@@ -120,15 +120,13 @@
                 android:id="@+id/createNoteBtnSubmit"
                 android:layout_width="150dp"
                 android:layout_height="50dp"
-                android:layout_marginTop="10dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginBottom="24dp"
                 android:layout_weight="1"
                 android:text="Submit"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/createNoteEditComment"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintTop_toTopOf="@+id/createNoteBtnCancel" />
 
             <Button
                 android:id="@+id/createNoteBtnCancel"
