--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <!-- Tab text sizes -->
+    <dimen name="tabTextSize">14sp</dimen>
+    <dimen name="keyboard_visibility_margin">150dp</dimen>
+    <dimen name="translate_y_value">200dp</dimen>
 </resources>
